# Process-Models-Complexity-Research-Web-App

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yaml  nginx.conf  pyproject.toml  requirements.txt  run_flask.sh  run_tw.sh
app/: app.py  config.ini  database.py  tailwind.config.js
app/static/: 2d_slider_billing.js  2d_slider_internal_op.js  2d_slider_remote_monitoring.js  2d_slider_sepsis.js  script.js  select_image.js  select_image_hospital_billing_system.js  select_image_internal_operations.js  select_image_remote_patient_monitoring.js  select_image_sepsis.js  style.css  styletw.css
app/templates/: base.html  form.html  index.html
app/templates/form/: form.html
app/templates/index/: index.html
app/templates/model_view/: final_page.html  info.html  model.html  model_hospital_billing_system.html  model_internal_operations.html  model_remote_patient_monitoring.html  model_sepsis.html
static/: styletw.css
templates/: form.html  model.html
